# myskills

./: .gitignore  CHANGELOG.md  CLAUDE.md  dev-prompt.skill
.github/: copilot-instructions.md
docs/plans/: 2026-02-02-dev-prompt-skill.md  2026-02-02-update-scripting-guidelines.md  2026-05-10-dispatch-agent-layer-c-handoff.md  2026-05-10-dispatch-agent-rust-rewrite.md
skills/agent-dispatcher/: SKILL.md
skills/create-release-workflow/: SKILL.md
skills/dev-prompt/: SKILL.md  dev-prompt
skills/dispatch-agent/: SKILL.md
skills/dispatch-agent/rust/: Cargo.toml
skills/dispatch-agent/rust/proptest-regressions/dispatch/: command.txt
skills/dispatch-agent/rust/scripts/: parity_check.sh  regen_golden.sh
skills/dispatch-agent/rust/src/: cli.rs  config.rs  config_cmd.rs  detect.rs  env.rs  fsutil.rs  init.rs  lib.rs  main.rs  rr_state.rs  templates.rs  types.rs
skills/dispatch-agent/rust/src/dispatch/: command.rs  display.rs  mod.rs
skills/dispatch-agent/rust/src/dispatch/process/: mod.rs  unix.rs  windows.rs
skills/dispatch-agent/rust/tests/: config_cmd.rs  detect.rs  dispatch.rs  init.rs  snapshots_test.rs
skills/dispatch-agent/rust/tests/fixtures/golden/: detect_output.json  init_output.toml
skills/dispatch-agent/rust/tests/fixtures/inputs/: fake-detect-templates.toml  init_canonical.json
skills/dispatch-agent/rust/tests/snapshots/: snapshots_test__format_list_detect_mixed.snap  snapshots_test__format_list_multi_tier.snap  snapshots_test__format_show_config_all_env_variants.snap
skills/git-release/: SKILL.md
skills/github-init/: SKILL.md
(+52 files in other folders)
