[package]
name = "dispatch-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "dispatch-agent"
path = "src/main.rs"

[[bin]]
name = "fake_agent"
path = "tests/bin/fake_agent.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
which = "7"
fs2 = "0.4"
indexmap = { version = "2", features = ["serde"] }
signal-hook = "0.3"
wait-timeout = "0.2"
libc = "0.2"
dirs = "5"

[dev-dependencies]
insta = "1"
proptest = "1"
tempfile = "3"
